--- a/public/stylesheets/indexTemplate.css
+++ b/public/stylesheets/indexTemplate.css
@@ -117,6 +117,15 @@ ul, li {
     height: 100%;
 }
 
+input[disabled]{
+    cursor: no-drop !important;
+    background: rgb(147, 203, 255) !important;
+}
+.CodeMirror .cm-spell-error:not(.cm-url):not(.cm-comment):not(.cm-tag):not(.cm-word) {
+    background: none !important;
+}
+
+
 footer {
     margin-top: 50px;
 }
