--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -123,7 +123,7 @@ input[type=submit] {
     line-height: 40px;
     text-align: center;
     color: #fff;
-    background: rgb(147, 203, 255);
+    background: #4DAAFF;
     border: none;
     border-radius: 5px;
     margin-top: -5px;
