--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,50 +1,3 @@
-<!--<!DOCTYPE>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title><%= title %></title>
-    <link rel="icon" href="/images/bootstrap-logo.png">
-    &lt;!&ndash;加载图标库&ndash;&gt;
-    <link rel="stylesheet" href="/plugins/font-awesome/css/font-awesome.css">
-    &lt;!&ndash;加载jquery&ndash;&gt;
-    <script src="/plugins/jquery/dist/jquery.js"></script>
-    &lt;!&ndash;加载angularJS&ndash;&gt;
-    <script src="/plugins/angular/angular.js"></script>
-    &lt;!&ndash;控制器文件&ndash;&gt;
-    <script type="text/javascript" src="/javascripts/controller.js"></script>
-    &lt;!&ndash;加载bootstrap前端UI框架&ndash;&gt;
-    <link rel="stylesheet" href="/plugins/bootstrap/dist/css/bootstrap.css">
-    <script src="/plugins/bootstrap/dist/js/bootstrap.min.js"></script>
-    &lt;!&ndash;加载首页的css样式&ndash;&gt;
-    <link rel="stylesheet" href="/stylesheets/login.css">
-</head>
-<body>
-&lt;!&ndash;导航栏&ndash;&gt;
-<nav class="navbar navbar-inverse" role="navigation">
-    <div class="container">
-        &lt;!&ndash;响应式汉堡按钮、logo&ndash;&gt;
-        <div class="navbar-header">
-            <button style="margin-left: 20px" type="button" class="navbar-toggle pull-left" data-toggle="collapse" data-target="#example-navbar-collapse">
-                <span class="sr-only">切换导航</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand hidden-xs" href="/"><img src="/images/logo.png" alt="logo"></a>
-        </div>
-        &lt;!&ndash;导航栏&ndash;&gt;
-        <div class="collapse navbar-collapse pull-left col-xs-12" id="example-navbar-collapse">
-            <ul class="nav navbar-nav navbar-left">
-                <li><a href="#"><span class="fa fa-id-card"></span> 发现</a></li>
-            </ul>
-        </div>
-        &lt;!&ndash;登录、注册按钮&ndash;&gt;
-        <div class="button pull-right">
-            <a class="login" href="/login">登录</a>
-            <a class="register" href="/register">注册</a>
-        </div>
-    </div>
-</nav>-->
 
 <!--主体内容-->
 <main ng-app="loginApp" ng-controller="loginController">
@@ -97,47 +50,9 @@
         <div class="main-bottom">
             <p>还没有账号?&#x3000;
                 <a href="/register">立即注册&#x3000;•&#x3000;</a>
-                <a href="#">游客访问&#x3000;•&#x3000;</a>
-                <a href="#">问答阅读</a>
+                <a href="/">游客访问&#x3000;•&#x3000;</a>
+                <a href="javascript:;">问答阅读</a>
             </p>
         </div>
     </div>
 </main>
-
-<!--
-&lt;!&ndash;尾部&ndash;&gt;
-<footer>
-    <div class="wrapper">
-        <div class="container">
-            &lt;!&ndash;尾部左部分&ndash;&gt;
-            <div class="footer-logo col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                <img src="/images/zhiyou.png" alt="">
-                <p>本网站所有的解释权归智游教育集团,由教学部nodeJS组成员整理,不允许任何人以任何目的进行传播和商业运作</p>
-            </div>
-            &lt;!&ndash;尾部右部分&ndash;&gt;
-            <div class="footer-list col-lg-5 col-md-5 col-sm-12 col-xs-12 pull-right">
-                <ul class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <li>关于</li>
-                    <li>关于我们</li>
-                    <li>广告合作</li>
-                    <li>友情链接</li>
-                </ul>
-                <ul class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <li>联系方式</li>
-                    <li>联系QQ</li>
-                    <li>电子邮件</li>
-                </ul>
-                <ul class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <li>旗下网站</li>
-                    <li>智游集团</li>
-                    <li>苏威晴的个人博客</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <p class="copy">本网站的所有权归智游集团学员苏威晴所有</p>
-</footer>
-</body>
-</html>
--->
-
