--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,71 +1,3 @@
-body {
-    background: #eee;
-}
-a, a:hover {
-    text-decoration: none !important;
-}
-.container {
-    padding: 0;
-}
-ul, li {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-.navbar {
-    border-radius: 0;
-    border: none;
-}
-.navbar-brand {
-    padding: 5px;
-}
-.navbar-brand img {
-    height: 100%;
-}
-.navbar-left {
-    margin-left: 50px;
-}
-.navbar-inverse {
-    background: #563D7C;
-    border-color: #563D7C;
-}
-.navbar-left li a {
-    color: #fff;
-}
-.navbar-left li:first-child {
-    background: #6E4E9E;
-}
-.navbar-left li:first-child a {
-    color: #fff;
-}
-.navbar-left li:hover {
-    background: #6E4E9E;
-    color: #fff;
-}
-.container {
-    position: relative;
-}
-.button {
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-.button a {
-    display: inline-block;
-    width: 80px;
-    height: 33px;
-    line-height: 33px;
-    color: #fff;
-    text-align: center;
-    margin: 8px 5px 0 5px;
-    border-radius: 5px;
-}
-.login {
-    background: #4DAAFF;
-}
-.register {
-    background: #38B836;
-}
 
 .mod-body {
     width: 714px;
@@ -129,6 +61,9 @@ input[type=submit] {
     margin-top: -5px;
     outline: none;
 }
+input[type=submit]:hover {
+    background: #339DFF;
+}
 .other {
     margin: 100px 0 100px 50px;
 }
@@ -184,32 +119,4 @@ input[type=submit] {
 }
 .main-bottom a {
     color: #66B7FF;
-}
-
-
-footer {
-    margin-top: 50px;
-}
-.wrapper {
-    border-top: 1px solid #E5E5E5;
-    border-bottom: 1px solid #E5E5E5;
-    padding: 30px 0;
-}
-.wrapper p {
-    margin: 5px 0;
-    color: #888;
-}
-.footer-list {
-    color: #888;
-}
-.footer-list ul li {
-    padding: 5px 0;
-}
-.footer-list ul li:first-child {
-    padding-bottom: 15px;
-}
-.copy {
-    text-align: center;
-    color: #888;
-    margin: 30px 0;
 }
