--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -1,74 +1,3 @@
-body {
-    background: #eee;
-}
-a, a:hover {
-    text-decoration: none !important;
-}
-.container {
-    padding: 0;
-}
-ul, li {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-.hide {
-    display: none;
-}
-.navbar {
-    border-radius: 0;
-    border: none;
-}
-.navbar-brand {
-    padding: 5px;
-}
-.navbar-brand img {
-    height: 100%;
-}
-.navbar-left {
-    margin-left: 50px;
-}
-.navbar-inverse {
-    background: #563D7C;
-    border-color: #563D7C;
-}
-.navbar-left li a {
-    color: #fff;
-}
-.navbar-left li:first-child {
-    background: #6E4E9E;
-}
-.navbar-left li:first-child a {
-    color: #fff;
-}
-.navbar-left li:hover {
-    background: #6E4E9E;
-    color: #fff;
-}
-.container {
-    position: relative;
-}
-.button {
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-.button a {
-    display: inline-block;
-    width: 80px;
-    height: 33px;
-    line-height: 33px;
-    color: #fff;
-    text-align: center;
-    margin: 8px 5px 0 5px;
-    border-radius: 5px;
-}
-.login {
-    background: #4DAAFF;
-}
-.register {
-    background: #38B836;
-}
 
 .mod-body {
     width: 714px;
@@ -127,44 +56,13 @@ ul, li {
     color: #fff;
     border: none;
 }
+.main-body .frame:last-child input:hover {
+    background-color: #339DFF;
+}
 .main-footer {
     margin: 60px 0 10px;
     height: 40px;
 }
-.register-success {
+.alert-success {
     padding: 10px 0;
-    background: #fcfddb;
-    color: #666;
-}
-.register-error {
-    padding: 10px 0;
-    background: #fcfddb;
-    color: #666;
-}
-
-footer {
-    margin-top: 50px;
-}
-.wrapper {
-    border-top: 1px solid #E5E5E5;
-    border-bottom: 1px solid #E5E5E5;
-    padding: 30px 0;
-}
-.wrapper p {
-    margin: 5px 0;
-    color: #888;
-}
-.footer-list {
-    color: #888;
-}
-.footer-list ul li {
-    padding: 5px 0;
-}
-.footer-list ul li:first-child {
-    padding-bottom: 15px;
-}
-.copy {
-    text-align: center;
-    color: #888;
-    margin: 30px 0;
 }
