准备一级回复

--- a/views/indexTemplate.ejs
+++ b/views/indexTemplate.ejs
@@ -12,6 +12,8 @@
     <script src="/plugins/angular/angular.js"></script>
     <!--控制器文件-->
     <script type="text/javascript" src="/javascripts/controller.js"></script>
+    <!--公共js文件-->
+    <script src="/javascripts/public.js"></script>
     <!--加载markdown编辑器-->
     <link rel="stylesheet" href="/plugins/simplemde-markdown-editor/dist/simplemde.min.css">
     <script src="/plugins/simplemde-markdown-editor/dist/simplemde.min.js"></script>
@@ -24,8 +26,6 @@
     <link rel="stylesheet" href="/stylesheets/indexTemplate.css">
     <!--动态的引入某个页面的静态资源-->
     <link rel="stylesheet" href="<%= resource %>" />
-    <link rel="stylesheet" href="/plugins/bootstrap-fileinput/bootstrap-fileinput.css">
-    <script src="/plugins/bootstrap-fileinput/bootstrap-fileinput.js"></script>
 </head>
 <body>
 <!--导航栏-->
