--- a/views/public/at.ejs
+++ b/views/public/at.ejs
@@ -1,9 +1,8 @@
-<li>
+<li class="read-list hide" i="<%= index + 1 %>">
     <p>
         <a href="#"><%= message.author_id.name %></a>
         在
         <a href="#"><%= message.question_id.title %></a>
         中@我
-        <span class="sure pull-right"><a href="#">确认已读</a></span>
     </p>
 </li>
