--- a/public/stylesheets/messages.css
+++ b/public/stylesheets/messages.css
@@ -153,3 +153,12 @@ main .container {
     font-size: 12px;
     color: #999;
 }
+.btn {
+    color: #666;
+}
+.btn:active, .btn.active {
+    cursor: default;
+    background: #499ef3;
+    border: 1px solid #499ef3;
+    color: #fff;
+}
