--- a/public/stylesheets/question.css
+++ b/public/stylesheets/question.css
@@ -74,6 +74,10 @@ main .container {
 .detail-content {
     color: #555;
     padding-left: 8px;
+    word-wrap:break-word;
+}
+.detail-content ul, .detail-content ol {
+   
 }
 .detail-option {
     font-size: 12px;
@@ -106,6 +110,7 @@ main .container {
 }
 .CodeMirror, .CodeMirror-scroll {
     height: 200px !important;
+    min-height: 200px !important;
 }
 .leave-foot input {
     border: none!important;
@@ -251,6 +256,7 @@ main .container {
     margin-top: 30px;
     padding-bottom: 20px;
     color: #999;
+    font-size: 12px;
 }
 .main-right img {
     width: 30px;
