--- a/views/question.ejs
+++ b/views/question.ejs
@@ -1,182 +1,33 @@
-
-
 <!--主体内容-->
-<main>
+<main ng-app="questionApp" ng-controller="questionController">
     <div class="container">
         <!--左部分-->
         <div class="col-lg-9 main-left">
             <div class="detail-all">
                 <div class="detail-share">
-                    <span class="detail-allShare"><a href="#">分享</a></span>
+                    <span class="detail-allShare"><a href="#"><%= question.categoryName %></a></span>
                 </div>
                 <!--标题-->
                 <div class="detail-title">
-                    <h1>我的第一个分享</h1>
+                    <h1><%= question.title %></h1>
                     <span class="detail-follow-btn"><a href="#">关注&nbsp;&nbsp;|&nbsp;&nbsp;<span class="follow-num">0</span></a></span>
                 </div>
                 <!--内容-->
-                <div class="detail-content">这是我的第一篇分享内容</div>
+                <div class="detail-content"><%- markdown(question.content) %></div>
                 <!--对内容操作-->
                 <div class="detail-option">
-                    <span>1 小时前</span>&#x3000;
-                    <span>9 次浏览</span>&#x3000;
+                    <span><%= question.create_time_ago() %></span>&#x3000;
+                    <span><%= question.click_num %> 次浏览</span>&#x3000;
                     <a href="/question/:id/edit"><span class="fa fa-edit"></span> 编辑</a>&#x3000;
                     <a href="#"><span class="fa fa-remove"></span> 删除</a>
                     <a class="pull-right" href=""><span class="fa fa-share-square-o"></span> 分享</a>
-                </div>
-                <!--评论-->
-                <div class="detail-comment">
-                    <div class="comment-head">
-                        <h1>2个回复</h1>
-                    </div>
-                    <div class="comment-body">
-                        <ul>
-                            <!--一级回复部分-->
-                            <li class="comment-body-list clearfix">
-                                <a class="head-img pull-left" href="#"><img src="/images/default-avatar.jpg" alt=""></a>
-                                <div class="col-lg-11 comment-list-content">
-                                    <a class="comment-author" href="#">suweiqing</a></span>
-                                    <p>第一条留言内容</p>
-                                    <div class="meta">
-                                        <a href="#">
-                                            <span class="fa fa-thumbs-o-up"></span>
-                                            0
-                                        </a>
-                                        &#x3000;
-                                        <a href="javascript:;" class="reply">
-                                            <span class="fa fa-comment-o"></span>
-                                            1 条回复
-                                        </a>
-                                        <span class="pull-right">15小时前</span>
-                                    </div>
-                                    <!--二级回复部分-->
-                                    <div class="comment-body small-comment-body hide">
-                                        <ul>
-                                            <li class="comment-body-list clearfix">
-                                                <a class="head-img pull-left" href="#"><img src="/images/default-avatar.jpg" alt=""></a>
-                                                <div class="col-lg-11 comment-list-content">
-                                                    <a class="comment-author" href="#">suweiqing</a></span>
-                                                    <p>第一条二级留言内容</p>
-                                                    <div class="meta">
-                                                        <a href="#">
-                                                            <span class="fa fa-thumbs-o-up"></span>
-                                                            0
-                                                        </a>
-                                                        &#x3000;
-                                                        <a href="#">
-                                                            <span class="fa fa-comment-o"></span>
-                                                            1 条回复
-                                                        </a>
-                                                        <span class="pull-right">15小时前</span>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                            <li class="comment-body-list clearfix">
-                                                <a class="head-img pull-left" href="#"><img src="/images/default-avatar.jpg" alt=""></a>
-                                                <div class="col-lg-11 comment-list-content">
-                                                    <a class="comment-author" href="#">suweiqing</a></span>
-                                                    <p>第二条二级留言内容</p>
-                                                    <div class="meta">
-                                                        <a href="#">
-                                                            <span class="fa fa-thumbs-o-up"></span>
-                                                            0
-                                                        </a>
-                                                        &#x3000;
-                                                        <a href="#">
-                                                            <span class="fa fa-comment-o"></span>
-                                                            1 条回复
-                                                        </a>
-                                                        <span class="pull-right">8小时前</span>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                        <div class="page">1</div>
-                                        <form action="" class="clearfix">
-                                            <textarea class="markdown" name="" id="questionTwo" cols="30" rows="10"></textarea>
-                                            <input type="submit" value="留言" class="pull-right">
-                                        </form>
-                                    </div>
-                                </div>
-                            </li>
-                            <!--一级回复部分-->
-                            <li class="comment-body-list clearfix">
-                                <a class="head-img pull-left" href="#"><img src="/images/default-avatar.jpg" alt=""></a>
-                                <div class="col-lg-11 comment-list-content">
-                                    <a class="comment-author" href="#">ssssss</a>
-                                    <span class="comment-label">作者</span>
-                                    <p>第二条留言内容</p>
-                                    <div class="meta">
-                                        <a href="#">
-                                            <span class="fa fa-thumbs-o-up"></span>
-                                            0
-                                        </a>
-                                        &#x3000;
-                                        <a href="javascript:;" class="reply">
-                                            <span class="fa fa-comment-o"></span>
-                                            0 条回复
-                                        </a>
-                                        <span class="pull-right">6小时前</span>
-                                    </div>
-                                    <!--二级回复部分-->
-                                    <div class="comment-body small-comment-body hide">
-                                        <ul>
-                                            <li class="comment-body-list clearfix">
-                                                <a class="head-img pull-left" href="#"><img src="/images/default-avatar.jpg" alt=""></a>
-                                                <div class="col-lg-11 comment-list-content">
-                                                    <a class="comment-author" href="#">suweiqing</a></span>
-                                                    <p>第一条二级留言内容</p>
-                                                    <div class="meta">
-                                                        <a href="#">
-                                                            <span class="fa fa-thumbs-o-up"></span>
-                                                            0
-                                                        </a>
-                                                        &#x3000;
-                                                        <a href="#">
-                                                            <span class="fa fa-comment-o"></span>
-                                                            1 条回复
-                                                        </a>
-                                                        <span class="pull-right">15小时前</span>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                            <li class="comment-body-list clearfix">
-                                                <a class="head-img pull-left" href="#"><img src="/images/default-avatar.jpg" alt=""></a>
-                                                <div class="col-lg-11 comment-list-content">
-                                                    <a class="comment-author" href="#">suweiqing</a></span>
-                                                    <p>第二条二级留言内容</p>
-                                                    <div class="meta">
-                                                        <a href="#">
-                                                            <span class="fa fa-thumbs-o-up"></span>
-                                                            0
-                                                        </a>
-                                                        &#x3000;
-                                                        <a href="#">
-                                                            <span class="fa fa-comment-o"></span>
-                                                            1 条回复
-                                                        </a>
-                                                        <span class="pull-right">8小时前</span>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                        <div class="page">1</div>
-                                        <form action="" class="clearfix">
-                                            <textarea class="markdown" name="" id="questionTwo" cols="30" rows="10"></textarea>
-                                            <input type="submit" value="留言" class="pull-right">
-                                        </form>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
                 </div>
                 <!--回复表单区域-->
                 <div class="leaveMessage">
                     <form action="">
                         <div class="leave-head">
-                            <a href="#"><img src="/images/default-avatar.jpg" alt=""></a>
-                            <span>suweiqing</span>
+                            <a href="/user/<%= user.name %>"><img src="<%= user.avatar %>" alt=""></a>
+                            <span><%= user.name %></span>
                         </div>
                         <div class="leave-body">
                             <textarea class="markdown" name="" id="question" cols="30" rows="10"></textarea>
@@ -192,21 +43,20 @@
             <div class="message">
                 <h4>发起人</h4>
                 <div>
-                    <img class="pull-left" src="/images/default-avatar.jpg" alt="">
-                    <a href="#">sssss</a></span>
+                    <img class="pull-left" src="<%= question.author.avatar %>" alt="">
+                    <a href="#"><%= question.author.name %></a></span>
                     <a href="#" class="more pull-right">关注</a>
                 </div>
-                <p>这家伙很懒,什么都没有留下..</p>
+                <p><%= question.author.motto %></p>
             </div>
             <!--相关问题板块-->
             <div class="hot">
                 <h4>相关问题</h4>
+                <% others.forEach(function (other) { %>
                 <p>
-                    <a href="">这是我发表的第一条分享</a>
+                    <a href="/question/<%= other._id %>"><%= other.title %></a>
                 </p>
-                <p>
-                    <a href="">这是我发表的第二条分享</a>
-                </p>
+                <% }) %>
             </div>
             <!--其它版块-->
             <div class="other">
@@ -216,19 +66,3 @@
     </div>
 </main>
 
-<script>
-    $(function () {
-        // 二级回复显示隐藏特效
-        $('.reply').on('click', function () {
-            $(this).parent().siblings('.small-comment-body').toggleClass('hide');
-        })
-        // 给所有textarea开启markdown
-        $('textarea').each(function (i) {
-            i = new SimpleMDE({
-                element: $(this)[0],
-                status:false,
-                styleSelectedText:false,
-            });
-        })
-    })
-</script>
