给作者留言

--- a/public/stylesheets/question.css
+++ b/public/stylesheets/question.css
@@ -275,3 +275,8 @@ main .container {
     color: #999;
 }
 
+
+input[disabled] {
+    cursor: no-drop !important;
+    background: #7DD07C !important;
+}
