--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -24,6 +24,8 @@
                         <% no_read.forEach(function(message, index) { %>
                             <% if(message.type == 'at') { %>
                                 <% include public/unat %>
+                            <% } else if(message.type == 'reply') { %>
+                                <% include public/unreply %>
                             <% } %>
                         <% }) %>
                     <% } else { %>
@@ -38,6 +40,8 @@
                         <% read.forEach(function(message, index) { %>
                             <% if(message.type == 'at') { %>
                                 <% include public/at %>
+                            <% } else if(message.type == 'reply') { %>
+                                <% include public/reply %>
                             <% } %>
                         <% }) %>
                     <% } else { %>
