--- a/views/public/reply-list.ejs
+++ b/views/public/reply-list.ejs
@@ -1,27 +1,34 @@
 <!--评论-->
+<% if(replies.length > 0) { %>
 <div class="detail-comment">
     <div class="comment-head">
-        <h1>2个回复</h1>
+        <h1><%= question.comment_num %>个回复</h1>
     </div>
     <div class="comment-body">
         <ul>
             <!--一级回复部分-->
-            <li class="comment-body-list clearfix">
-                <a class="head-img pull-left" href="#"><img src="/images/default-avatar.jpg" alt=""></a>
+            <% replies.forEach(function (reply, index) { %>
+            <li id="<%= reply._id %>" class="comment-body-list clearfix">
+                <a class="head-img pull-left" href="#"><img src="<%= reply.author.avatar %>" alt=""></a>
                 <div class="col-lg-11 comment-list-content">
-                    <a class="comment-author" href="#">suweiqing</a></span>
-                    <p>第一条留言内容</p>
+                    <a class="comment-author" href="#"><%= reply.author.name %></a></span>
+                    <p><%- markdown(reply.content) %></p>
                     <div class="meta">
                         <a href="#">
-                            <span class="fa fa-thumbs-o-up"></span>
+                            <span class="fa fa-thumbs-up"></span>
+                            0
+                        </a>
+                        &nbsp;
+                        <a href="#">
+                            <span class="fa fa-thumbs-down"></span>
                             0
                         </a>
                         &#x3000;
                         <a href="javascript:;" class="reply">
-                            <span class="fa fa-comment-o"></span>
+                            <span class="fa fa-commenting"></span>
                             1 条回复
                         </a>
-                        <span class="pull-right">15小时前</span>
+                        <span class="pull-right"><%= reply.create_time_ago() %></span>
                     </div>
                     <!--二级回复部分-->
                     <div class="comment-body small-comment-body hide">
@@ -73,75 +80,8 @@
                     </div>
                 </div>
             </li>
-            <!--一级回复部分-->
-            <li class="comment-body-list clearfix">
-                <a class="head-img pull-left" href="#"><img src="/images/default-avatar.jpg" alt=""></a>
-                <div class="col-lg-11 comment-list-content">
-                    <a class="comment-author" href="#">ssssss</a>
-                    <span class="comment-label">作者</span>
-                    <p>第二条留言内容</p>
-                    <div class="meta">
-                        <a href="#">
-                            <span class="fa fa-thumbs-o-up"></span>
-                            0
-                        </a>
-                        &#x3000;
-                        <a href="javascript:;" class="reply">
-                            <span class="fa fa-comment-o"></span>
-                            0 条回复
-                        </a>
-                        <span class="pull-right">6小时前</span>
-                    </div>
-                    <!--二级回复部分-->
-                    <div class="comment-body small-comment-body hide">
-                        <ul>
-                            <li class="comment-body-list clearfix">
-                                <a class="head-img pull-left" href="#"><img src="/images/default-avatar.jpg" alt=""></a>
-                                <div class="col-lg-11 comment-list-content">
-                                    <a class="comment-author" href="#">suweiqing</a></span>
-                                    <p>第一条二级留言内容</p>
-                                    <div class="meta">
-                                        <a href="#">
-                                            <span class="fa fa-thumbs-o-up"></span>
-                                            0
-                                        </a>
-                                        &#x3000;
-                                        <a href="#">
-                                            <span class="fa fa-comment-o"></span>
-                                            1 条回复
-                                        </a>
-                                        <span class="pull-right">15小时前</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="comment-body-list clearfix">
-                                <a class="head-img pull-left" href="#"><img src="/images/default-avatar.jpg" alt=""></a>
-                                <div class="col-lg-11 comment-list-content">
-                                    <a class="comment-author" href="#">suweiqing</a></span>
-                                    <p>第二条二级留言内容</p>
-                                    <div class="meta">
-                                        <a href="#">
-                                            <span class="fa fa-thumbs-o-up"></span>
-                                            0
-                                        </a>
-                                        &#x3000;
-                                        <a href="#">
-                                            <span class="fa fa-comment-o"></span>
-                                            1 条回复
-                                        </a>
-                                        <span class="pull-right">8小时前</span>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                        <div class="page">1</div>
-                        <form action="" class="clearfix">
-                            <textarea class="markdown" name="" id="questionTwo" cols="30" rows="10"></textarea>
-                            <input type="submit" value="留言" class="pull-right">
-                        </form>
-                    </div>
-                </div>
-            </li>
+            <% }) %>
         </ul>
     </div>
 </div>
+<% } %>
