--- a/views/public/unreply.ejs
+++ b/views/public/unreply.ejs
@@ -3,7 +3,10 @@
         <a href="/user/<%= message.author_id.name %>"><%= message.author_id.name %></a>
         在
         <a href="/question/<%= message.question_id._id %>"><%= message.question_id.title %></a>
-        中@我
+        回复了: <br>
+        &#x3000;<span style="font-size: 12px;color: #aaa;">
+            <%= message.reply_id.content %>
+        </span>
         <span ng-click="readOne(<%= index %>)" class="sure pull-right"><a href="#">确认已读</a></span>
     </p>
 </li>
