--- a/views/indexTemplate.ejs
+++ b/views/indexTemplate.ejs
@@ -21,6 +21,9 @@
     <link rel="stylesheet" href="/plugins/bootstrap/dist/css/bootstrap.css">
     <script src="/plugins/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <!--ejs-->
+    <script src="/plugins/ejs.js"></script>
+
 
     <!--引入公共部分的样式-->
     <link rel="stylesheet" href="/stylesheets/indexTemplate.css">
