--- a/views/public/reply.ejs
+++ b/views/public/reply.ejs
@@ -1,4 +1,4 @@
-<li class="read-item" message-id="<%= message._id %>">
+<li class="read-list hide" i="<%= index + 1 %>">
     <p>
         <a href="/user/<%= message.author_id.name %>"><%= message.author_id.name %></a>
         在
