--- a/views/public/reply-list.ejs
+++ b/views/public/reply-list.ejs
@@ -5,7 +5,7 @@
         <h1><%= question.comment_num %>个回复</h1>
     </div>
     <div class="comment-body">
-        <ul>
+        <ul id="reply-all-list">
             <!--一级回复部分-->
             <% replies.forEach(function (reply, index) { %>
             <li id="<%= reply._id %>" class="comment-body-list clearfix">
@@ -30,58 +30,14 @@
                         </a>
                         <span class="pull-right"><%= reply.create_time_ago() %></span>
                     </div>
-                    <!--二级回复部分-->
-                    <div class="comment-body small-comment-body hide">
-                        <ul>
-                            <li class="comment-body-list clearfix">
-                                <a class="head-img pull-left" href="#"><img src="/images/default-avatar.jpg" alt=""></a>
-                                <div class="col-lg-11 comment-list-content">
-                                    <a class="comment-author" href="#">suweiqing</a></span>
-                                    <p>第一条二级留言内容</p>
-                                    <div class="meta">
-                                        <a href="#">
-                                            <span class="fa fa-thumbs-o-up"></span>
-                                            0
-                                        </a>
-                                        &#x3000;
-                                        <a href="#">
-                                            <span class="fa fa-comment-o"></span>
-                                            1 条回复
-                                        </a>
-                                        <span class="pull-right">15小时前</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="comment-body-list clearfix">
-                                <a class="head-img pull-left" href="#"><img src="/images/default-avatar.jpg" alt=""></a>
-                                <div class="col-lg-11 comment-list-content">
-                                    <a class="comment-author" href="#">suweiqing</a></span>
-                                    <p>第二条二级留言内容</p>
-                                    <div class="meta">
-                                        <a href="#">
-                                            <span class="fa fa-thumbs-o-up"></span>
-                                            0
-                                        </a>
-                                        &#x3000;
-                                        <a href="#">
-                                            <span class="fa fa-comment-o"></span>
-                                            1 条回复
-                                        </a>
-                                        <span class="pull-right">8小时前</span>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                        <div class="page">1</div>
-                        <form action="" class="clearfix">
-                            <textarea class="markdown" name="" id="questionTwo" cols="30" rows="10"></textarea>
-                            <input type="submit" value="留言" class="pull-right">
-                        </form>
-                    </div>
+                    <% include comment-list %>
                 </div>
             </li>
             <% }) %>
         </ul>
     </div>
 </div>
+<% } %>
+<% if(question.comment_num > 5) { %>
+<div id="showReply" target="<%= question._id %>">查看全部</div>
 <% } %>
