--- a/views/public/at.ejs
+++ b/views/public/at.ejs
@@ -2,7 +2,7 @@
     <p>
         <a href="/user/<%= message.author_id.name %>"><%= message.author_id.name %></a>
         在
-        <a href="/question/<%= message.question_id._id %>"><%= message.question_id.title %></a>
+        <a href="/question/<%= message.question_id._id %>#<%= message.reply_id._id %>"><%= message.question_id.title %></a>
         中@我
     </p>
 </li>
