--- a/views/public/unat.ejs
+++ b/views/public/unat.ejs
@@ -2,7 +2,7 @@
     <p>
         <a href="/user/<%= message.author_id.name %>"><%= message.author_id.name %></a>
         在
-        <a href="/question/<%= message.question_id._id %>"><%= message.question_id.title %></a>
+        <a href="/question/<%= message.question_id._id %>#<%= message.reply_id._id %>"><%= message.question_id.title %></a>
         中@我
         <span ng-click="readOne(<%= index %>)" class="sure pull-right"><a href="#">确认已读</a></span>
     </p>
