--- a/views/public/unreply.ejs
+++ b/views/public/unreply.ejs
@@ -2,7 +2,7 @@
     <p>
         <a href="/user/<%= message.author_id.name %>"><%= message.author_id.name %></a>
         在
-        <a href="/question/<%= message.question_id._id %>"><%= message.question_id.title %></a>
+        <a href="/question/<%= message.question_id._id %>#<%= message.reply_id._id %>"><%= message.question_id.title %></a>
         回复了: <br>
         &#x3000;<span style="font-size: 12px;color: #aaa;">
             <%= message.reply_id.content %>
